# FractalGenerator

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw3/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
shaders/: test.cs.glsl  test.frag.glsl  test.vert.glsl  test_pass1.cs.glsl
src/: main.cpp
